--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -449,7 +449,7 @@
           <td>
             <code>a</code>
           </td>
-          <td>Indicates the submenu is open.</td>
+          <td>Indicates the submenu is open. (<strong>See note below.</strong>)</td>
         </tr>
         <tr>
           <td></td>
@@ -459,7 +459,7 @@
           <td>
             <code>a</code>
           </td>
-          <td>Indicates the submenu is closed.</td>
+          <td>Indicates the submenu is closed. (<strong>See note below.</strong>)</td>
         </tr>
         <tr>
           <th>
